remove assessment code from plugins FLAPTH-2326 https://issues.redhat.com/browse/FLPATH-2326
